renamed Session to OathelloSession + updated readme

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
             ],
             "aliases": {
                 "Oathello": "Equipmentc\\Oathello\\Facades\\Oathello",
-                "Envelope": "Equipmentc\\Oathello\\Facades\\Envelope",
+                "OathelloSession": "Equipmentc\\Oathello\\Facades\\Session",
                 "Document": "Equipmentc\\Oathello\\Facades\\Document"
             }
         }
