--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "prefer-stable": true,
     "minimum-stability": "dev",
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "*"
     }
 }
